added userData in GraphQL
